--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
   go_router: ^11.1.2
+  animate_do: ^3.1.2
+  flutter_lints: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -28,3 +30,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+
+  assets:
+  - assets/images/
