added: riverpod package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   go_router: ^11.1.2
   animate_do: ^3.1.2
   flutter_lints: ^2.0.3
+  riverpod: ^2.4.1
 
 dev_dependencies:
   flutter_test:
